# hrgs-dev

./: .gitignore  HRGS_DevLog_20260609.md  LICENSE  README.md  hyperate.html  index.html  package.json  script.js  tailwind.config.js  tsconfig.json
public/: index.html
src/: App.tsx  ErrorHandler.ts  index.tsx  store.ts  types.ts  websocket.tsx
src-tauri/: Cargo.toml  config.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bluetooth.rs  main.rs  midi.rs  osc.rs  oscquery.rs  state.rs
src/components/: ConnectionControls.tsx  SettingsPanel.tsx
src/managers/: BluetoothManager.ts  BluetoothManager.tsx  HeartRateInputOutput.ts  HyperateManager.ts  MidiManager.ts  OscManager.ts  WidgetManager.tsx  websocket.ts
