[package]
name = "hrgs"
version = "0.5.0"
edition = "2021"

[dependencies]
tauri = { version = "2.4.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
rosc = "0.11.4"
tauri-plugin-fs = "2.0.0"
tauri-plugin-opener = "2.0"
tauri-plugin-http = "2.4.2"
midir = "0.9.1"
tauri-plugin-websocket = "2"
btleplug = { version = "0.11", features = ["serde"] }
tokio = { version = "1.0", features = ["rt", "time"] }
futures = "0.3"
futures-util = "0.3"
uuid = { version = "1.10", features = ["v4"] }
directories = "5.0"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
